# rpi_pico_c_vs_py

./: .gitignore  README.md
factorial/: CMakeLists.txt  main.c  main.py
gpio_blinking/: CMakeLists.txt  main.c  main.py
matrix_mult/: CMakeLists.txt  main.c  main.py
summation/: CMakeLists.txt  main.c  main.py
